# Venus

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  聘AI人力资源管理系统 V1.0_申请表.docx
agent/: base_agent.py  runtime.py
agent_configs/: alpha.json  beta.json  clerk.json  developer.json  global.json  groups.json  manager.json  terminator.json  test.json
core/: config.py  console_router.py  group_config.py  mcp_client.py  skill_registry.py
skills/collab/: SKILL.md
skills/testing/: SKILL.md
tests/: test_console_router.py  test_groups.py  test_runtime.py  test_skills.py
tools/: docker_tools.py  docx_editor.py  manage_container.py
