[project]
name = "venus-mcp-framework"
version = "0.1.0"
description = "A multi-agent development framework based on MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-docx>=1.1.0",
]
